# Template

./: .gitignore  CMakeLists.txt  README.md
App/: CMakeLists.txt
App/source/: App.cpp
Core/: CMakeLists.txt
Core/source/: Core.h
Core/source/FileIO/: FileHandler.cpp  FileHandler.h  FileIO.hpp  winFileIO.hpp
Core/source/GUI/: basePanel.h  windowSettings.h
Core/source/Manager/: AppManager.cpp  AppManager.h
Core/source/MultiThread/: SafeQueue.h  ThreadPool.cpp  ThreadPool.h
Core/source/Utilities/: Color.cpp  Color.h  Logger.h  Timer.h
Scripts/: Setup-Windows.bat
